syntax = "proto3";
package WorkerNode;

import "google/protobuf/empty.proto";

option go_package = "github.com/resource-aware-jds/resource-aware-jds/generated/proto";

service WorkerNode {
  rpc SendTask(RecievedTask) returns (google.protobuf.Empty) {}
  rpc HealthCheck(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message RecievedTask {
  string ID = 1;
  bytes  TaskAttributes = 2;
  string DockerImage = 3;

}